[package]
name = "double-ratchet-signal-cbc-aes256-pkcs7-compact"
version = "0.1.1"
edition = "2021"
authors = ["myl7 <myl@myl.moe>"]
description = "See the crate double-ratchet-signal"
license = "BSD-3-Clause"
homepage = "https://github.com/myl7/double-ratchet-signal"
documentation = "https://github.com/myl7/double-ratchet-signal#readme"
repository = "https://github.com/myl7/double-ratchet-signal.git"
keywords = ["crypto"]
categories = ["cryptography", "no-std"]

[features]
default = ["std"]
std = []

[dependencies]
aes = "0.8.3"
cbc = { version = "0.1.2", features = ["alloc"] }
